# StringEXT

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  stringext.c  stringext.h
include/: stringext.h
src/: Makefile.am  stringext.c
